--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,13 @@
             </form>
         </div>
     </section>
+     <!-- Login Section -->
+    <section class="login-section py-20 text-center">
+        <div class="container mx-auto">
+            <h2 class="text-3xl font-bold mb-8">Vous connectez</h2>
+            <button class="bg-blue-500 text-white py-2 px-4 rounded">Connexion</button>
+        </div>
+    </section>
 
     <!-- Chatbot Section -->
     <div id="botpress-webchat"></div>
